@@ -1,3 +1,8 @@
+2005-01-04  Dennis Cranston <dennis_cranston@yahoo.com>
+
+	* gnome-settings-multimedia-keys.c: (execute):  use g_spawn_sync() 
+	and g_spawn_async() to define the working directory.
+	
 2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* factory.c: (main): NULL vs. 0.
